--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,10 @@ dev = [
     "isort",
     "yapf",
     "ruff",
+    "sphinx",
+    "sphinx_rtd_theme",
+    "pytest",
+    "pytest-django"
 ]
 
 [tool.setuptools]
